fix outro spacing

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -139,7 +139,7 @@ img {
    */
 }
 
-#intro h1 {font-size: 60px}
+#intro h1, #outro h1 {font-size: 60px}
 
 a { text-shadow: none; }
 
